--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
       <button id="closeInfoBtn">X</button>
       <h2>Speedlight1221's Crazy Conspiracy Board: Web page</h2>
       <p style="color: white;">Welcome to Speedlight1221's Crazy Conspiracy Board: Web page! Made because deltarune chapters 3 & 4 came out and i needed to get my thought "in order". It could hvae been done in paint but i was too stubborn to do it that way. I hope you find it useful. </p>
-      <h4>Version 1.1.1</h4>
+      <h4>Version 1.1.2</h4>
       <h5>Changes:</h5>
-      <p>Increased board size again</p>
+      <p>Fixed Board size being realtive to window size.</p>
       <hr>
       <p> Tools: </p>
       <p><span>Click</span> - Default tool, use when editing content of textboxes or when moving the board</p>
